# midjournal_app

./: .gitignore  PROGRESS-PHASE-1.md  PROGRESS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json  vercel.json
.github/workflows/: ci.yml
.turbo/cache/: 023748ac179f993a-meta.json  0ccdc3bd6bb5c1a2-meta.json  0ccdc3bd6bb5c1a2.tar.zst  1b77f5caf4cfed26-meta.json  2c1d563e283c7cc3-meta.json  58059939e001d40a-meta.json  58059939e001d40a.tar.zst  7759096c90316b72-meta.json  7759096c90316b72.tar.zst  7e8cd51215aa0dcd-meta.json  8cde664955eb4533-meta.json  8cde664955eb4533.tar.zst  8e41447019d0f27a-meta.json  (+4 more)
apps/backend/: PROGRESS-PHASE-1.5.md  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  package.json  prometheus.yml  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 2d1979aafcaf_add_image_url_to_journal_entries.py  c75418c1a833_add_structured_analysis_fields_to_.py  ff4d9851aab3_add_entry_number_to_journal_entries.py
apps/backend/docs/: tech_stack_decisions.md
apps/backend/docs/architecture/: ingestion_flow.puml
apps/backend/docs/development/: local_setup.md
apps/backend/docs/devops/: ci_cd_strategy.md  iac_guide.md  llm_cost_analysis_p2.md  testing_strategy.md
apps/backend/docs/requirements/: nfrs.md  personas.md  user_stories.md
apps/backend/infra/: Pulumi.yaml  __main__.py  config.py
apps/backend/infra/src/iam/: __init__.py
apps/backend/src/analysis/: consumer.py  service.py
apps/backend/src/api/: Dockerfile  main.py  metrics.py
apps/backend/src/api/dependencies/: auth.py  services.py
apps/backend/src/api/routers/: auth.py  crud.py  images.py  ingestion.py  journal.py  ocr.py  query.py  suggestions.py  tts.py
apps/backend/src/auth/: config.py  service.py
apps/backend/src/data_models/: schemas.py
apps/backend/src/db/: models.py
apps/backend/src/image_gen/: consumer.py  prompt_generator.py  service.py  stable_diffusion_service.py
apps/backend/src/ingestion/: consumer.py  service.py
apps/backend/src/interfaces/: authentication_service.py  document_ingestion_service.py  document_parser_service.py  file_storage_service.py  image_generation_service.py  llm_inference_service.py  ocr_service.py  suggestion_service.py  text_to_speech_service.py
apps/backend/src/journal/: service.py
apps/backend/src/llm/: prompts.py  service.py
apps/backend/src/message_queue/: client.py
apps/backend/src/ocr/: service.py
apps/backend/src/parsing/: service.py
apps/backend/src/query/: service.py
apps/backend/src/storage/: minio_client.py
apps/backend/src/suggestions/: service.py
apps/backend/src/text_processing/: service.py
apps/backend/src/tts/: service.py
apps/backend/src/vector_store/clients/: qdrant.py
apps/backend/tests/unit/: test_placeholder.py
db/: schema.sql
infra/: __init__.py  __main__.py  lambda_function.py
src/api/: Dockerfile  (+1 more)
(+116 files in other folders)
