[tool.poetry]
name = "midjournal-app"
version = "0.1.0"
description = "Personalized RAG-powered Journal"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.4.0"
langchain = "^0.3.26"
qdrant-client = "^1.9.0"
psycopg2-binary = "^2.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.33"
pika = "^1.3.2"
sentence-transformers = "^3.0.1"
torch = "^2.3.1"
ollama = "^0.2.1"
gtts = "^2.5.4"
pytesseract = "^0.3.13"
pypdf2 = "^3.0.1"
pillow = "^11.3.0"
python-docx = "^1.2.0"
markdown-it-py = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^3.8.0"
ruff = "^0.5.5"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn src.api.main:app --host 0.0.0.0 --port 8000 --reload"
test = "pytest tests/"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
build-docker = "poetry export -f requirements.txt --output requirements.txt --without-hashes && docker build -t midjournal-backend:latest ."
